5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1832_3179.log
== SUBMITION (2019-06-13 19:28:03) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+a[i]
	i=i-1
print(t)
-- EXECUTION TIME:
1.1236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 6, in <module>
    t= t+a[i]
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:28:05) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+a[i]
	i=i-1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:29:00) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+a[i]
	i=i-1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:30:20) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+ a[i]
	i= i -1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:01) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+ a[i]
	i= i-1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:24) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+ a[i]
	i= i-1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:39:01) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+a[i]
	i= i-1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:47:32) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	t= t+a[i]
	i= i-1
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:48:55) 
-- CODE:
from numpy import*
a=array(eval(input("numeros: ")))
c=-1
t=""
for v in a:
	i=i-1
	t= t+a[i]
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
